<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Home</string>
    <string name="action_settings">Settings</string>
    <string name="setup1">个人设置</string>
    <string name="setup2">为他人设置</string>
    <string name="setup3">权限设置</string>
    <string name="str_light">灯光模式</string>
    <string name="str_music">音乐模式</string>
    <string name="str_lightmode1">明亮</string>
    <string name="str_lightmode2">柔和</string>
    <string name="str_lightmode3">浪漫</string>
    <string name="str_music1">热情</string>
    <string name="str_music2">怀旧</string>
    <string name="str_music3">抒情</string>
    
    <string name="str_more">更多</string>
    <string name="str_default">默认</string>
    <string name="str_composition">模式组合</string>
    <string name="str_nomusic">不播放音乐</string>
    <string name="str_greeting">设置问候声</string>
    <string name="str_quit">退出登录</string>
    <string name="str_change">切换账号</string>
    <string name="str_name">用户名</string>
    <string name="str_password">密码</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_accept">接受</string>
    <string name="str_notaccept">不接受</string>
    <string name="str_accmode">接受模式种类: </string>
    <string name="str_time">接受时长: </string>
    <string name="currentmode">当前模式: </string>
    <string name="intelligent">智能模式</string>
    <string name="handmove">手控模式</string>
    <string name="str_close">关闭</string>
 

</resources>
