<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
   
    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/str_name"
        android:inputType="textPersonName" >
    </EditText>

    <view
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        class="AbsoluteLayout" />

    <EditText
        android:id="@+id/registerPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPassword" />

    <view
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        class="AbsoluteLayout" />

    <Button
        android:id="@+id/registerbtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/str_register"  />

</LinearLayout>
