<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/modealert"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20px"
    android1:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lightmode1"
            android1:textColor="@drawable/天色" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lightmode2"
            android1:textColor="@drawable/天色" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lightmode3"
            android1:textColor="@drawable/天色" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/alertbtn1"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="取消" />
        <Button
            android:id="@+id/alertbtn2"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:text="确定" />
    </LinearLayout>

</LinearLayout>